# universal-pudo-saas

./: .gitignore  CHANGELOG.md  README.md
backend/: README.md  pyproject.toml
backend/alembic/versions/: 2871e90d88b8_add_authentication_fields_to_users.py  88198ca0d827_create_organisations_table.py  9659ab8bd324_create_memberships_table.py  a32fbc497837_create_users_table.py
backend/src/universal_pudo_saas/: __init__.py  main.py
backend/src/universal_pudo_saas/core/: settings.py
backend/src/universal_pudo_saas/database/: metadata.py  session.py
backend/src/universal_pudo_saas/memberships/: models.py
backend/src/universal_pudo_saas/organisations/: models.py
backend/src/universal_pudo_saas/security/: passwords.py  tokens.py
backend/src/universal_pudo_saas/shared/: __init__.py  entities.py
backend/src/universal_pudo_saas/users/: models.py
backend/tests/: test_entities.py  test_main.py  test_membership.py  test_organisation.py  test_passwords.py  test_settings.py  test_tokens.py  test_user.py
docs/: architecture.md  database-model.md  domain-model.md  persistence-decisions.md  product-vision.md  project-memory.md  project-status.md  roadmap.md
docs/adr/: ADR-0001-repository-structure-strategy.md  ADR-0002-authentication-strategy.md  ADR-0003-credential-storage-strategy.md  ADR-0004-multi-tenant-strategy.md  ADR-0005-module-boundary-strategy.md  ADR-0006-self-hosted-compatibility-strategy.md
