[project]
name = "universal-pudo-saas-backend"
version = "0.1.0"
description = "Backend API for Universal PUDO SaaS."
readme = "README.md"
requires-python = ">=3.14,<3.15"
authors = [
    { name = "Vincent Gueret" }
]
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.0",
    "psycopg[binary]>=3.2.0",
    "universal-pudo-engine @ git+https://github.com/Vincecodeur/universal-pudo-engine.git@v1.0.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.3.0",
    "python-jose[cryptography]>=3.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "httpx>=0.28.0",
    "ruff>=0.12.0"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]
addopts = [
    "--strict-markers",
    "--strict-config"
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.packages.find]
where = [
    "src"
]
